# leadops

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  README.md  pixi.toml  pyproject.toml
.github/workflows/: ci.yml
crm/: cli.py  config.py
crm/adapters/: __init__.py
crm/adapters/airtable/: __init__.py  client.py  mirror.py  pull.py  schema.py
crm/domain/: rules.py
crm/services/: __init__.py  events.py  mirror.py  pull.py  pull_service.py  sync.py  sync_state.py  touch.py
docs/: architecture.md  cli.md  index.md  schema.md  spec.md  sync.md  workspaces.md
docs/concepts/: architecture.md
docs/guides/: airtable-ui.md  demo.md  sync.md  workspaces.md
docs/internals/: phases.md  spec.md
docs/reference/: cli.md  schema.md
resources/schema/: canonical.yaml
schema/: airtable.mapping.yaml
scripts/: setup-airtable-pat.sh  snapshot.sh
src/crm/: cli.py  config.py
src/crm/adapters/airtable/: client.py  mirror.py  pull.py  schema.py
src/crm/domain/: __init__.py  models.py  stages.py
src/crm/services/: __init__.py  exports.py  leads.py  mirror.py  pull.py  pull_service.py  sync.py  utils.py
src/crm/store/: __init__.py  migrations.py  sqlite.py
tests/: test_airtable_field_payload.py  test_config.py  test_foreign_keys.py  test_leads.py  test_mapping.py  test_mirror_schema.py  test_pull_conflicts.py  test_pull_modified_field.py  test_pull_report.py  test_schema.py  test_touch.py
workspaces/: .current
workspaces/demo/: workspace.yaml
workspaces/synbiogrs27/: workspace.yaml
