[project]
name = "leadops"
version = "0.1.0"
description = "Local-first lead operations with an Airtable mirror."
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
  "typer>=0.12.0",
  "pyyaml>=6.0.1",
  "requests>=2.31.0",
  "openpyxl>=3.1.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4.4",
  "ruff>=0.6.9",
  "pre-commit>=3.7.1",
  "build>=1.2.2",
]

[dependency-groups]
dev = [
  "pytest>=7.4.4",
  "ruff>=0.6.9",
  "pre-commit>=3.7.1",
  "build>=1.2.2",
]

[project.scripts]
crm = "crm.cli:app"

[build-system]
requires = ["setuptools>=68.2.2", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["crm*"]
exclude = ["data*", "exports*", "resources*", "workspaces*", "docs*", "tests*", "scripts*"]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [".pixi", ".venv", "data", "exports", "workspaces"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["src"]
